--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
+    "@ng-select/ng-select": "^15.1.3",
     "@prisma/client": "^6.12.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
