--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,6 +16,13 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "generated/prisma": ["./generated/prisma"]
+    }
+  },
+  "include": [
+    "src",
+    "generated/prisma"
+  ]
 }
