--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,6 @@
     "env": {
       "NPM_CONFIG_LEGACY_PEER_DEPS": "true"
     }
-  }
+  },
+  "buildCommand": "ng build --configuration production"
 } 
