--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,5 @@
       "NPM_CONFIG_LEGACY_PEER_DEPS": "true"
     }
   },
-  "buildCommand": "ng build --configuration production"
+  "buildCommand": "ng build --configuration production --aot"
 } 
