--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
   "build": {
     "env": {
-      "NPM_CONFIG_LEGACY_PEER_DEPS": "true"
+      "NPM_CONFIG_LEGACY_PEER_DEPS": "true",
+      "NODE_ENV": "production"
     }
   },
-  "buildCommand": "ng build --configuration production --aot"
+  "buildCommand": "NODE_ENV=production ng build --configuration production --aot"
 } 
