--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@angular-devkit/build-angular": "^19.2.10",
     "@angular/cli": "^19.2.10",
     "@angular/compiler-cli": "^19.2.0",
+    "@ngx-env/builder": "^20.1.1",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.20",
     "jasmine-core": "~5.6.0",
